--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "bemponent",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Обертка над React компонентом для создания className по методологии bemponent",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile": "babel --presets es2015,stage-2 -d ./ src/"
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,15 @@
   },
   "homepage": "https://github.com/completed-actions/bemponent#readme",
   "dependencies": {
+    "@babel/core": "^7.0.0-beta.44",
+    "@babel/preset-env": "^7.0.0-beta.44",
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^8.0.0-beta.2",
+    "babel-preset-es2015": "^6.24.1",
     "lodash": "^4.17.5",
-    "react": "^16.3.2"
+    "react": "^16.3.2",
+    "babel-preset-stage-2": "^6.24.1"
+  },
+  "devDependencies": {
   }
 }
