--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "bemponent",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Обертка над React компонентом для создания className по методологии bemponent",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "babel --presets es2015,stage-2 -d ./ src/"
+    "compile": "babel --presets env,stage-2 -d ./dist ./index.js"
   },
   "repository": {
     "type": "git",
@@ -16,22 +16,17 @@
     "react",
     "component"
   ],
-  "author": "",
-  "license": "ISC",
+  "author": "completed-actions-t3",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/completed-actions/bemponent/issues"
   },
   "homepage": "https://github.com/completed-actions/bemponent#readme",
   "dependencies": {
-    "@babel/core": "^7.0.0-beta.44",
-    "@babel/preset-env": "^7.0.0-beta.44",
+    "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
-    "babel-loader": "^8.0.0-beta.2",
-    "babel-preset-es2015": "^6.24.1",
-    "lodash": "^4.17.5",
-    "react": "^16.3.2",
-    "babel-preset-stage-2": "^6.24.1"
-  },
-  "devDependencies": {
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "react": "^16.3.2"
   }
 }
