--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "babel --presets env,stage-2 -d ./dist ./index.js"
+    "compile": "babel --presets env,stage-2 -d ./dist ./index.js",
+    "compile:cdn": "babel --presets env,stage-2 -d ./dist ./index.cdn.js"
   },
   "repository": {
     "type": "git",
